[tool.poetry]
name = "w3-client"
version = "0.1.0"
description = ""
authors = ["Pavel Paranin <pavel@paran.in>"]
readme = "README.md"
packages = [{include = "w3_client"}]

[tool.poetry.dependencies]
python = "^3.10"
web3 = "^6.11.3"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.5.0"
pytest = "^7.4.3"
pytest-cov = "^4.1.0"
sphinx = "^7.2.6"
myst-nb = {version = "^1.0.0", python = "^3.10"}
sphinx-autoapi = "^3.0.0"
sphinx-rtd-theme = "^1.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
